<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.faster.automation</groupId>
	<artifactId>faster-nov-2024</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Faster</name>
	<description>Faster Automation Framework</description>

	<dependencies>

		<!-- Note: After many trials, found that the below combination of selenium-java - 4.16.1, java-client works 9.0.0
		selenium-http-jdk-client - 4.13.0
		 -->
		<!--
		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<!-- According to the compatibility matrix provided below, for
			java-client 9.3.0, Selenium client should be max 4.23.0 -->
			<!--
			https://github.com/appium/java-client#add-appium-java-client-to-your-test-framework -->
			<artifactId>selenium-java</artifactId>
			<version>4.16.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.appium/java-client -->
		<dependency>
			<groupId>io.appium</groupId>
			<artifactId>java-client</artifactId>
			<version>9.0.0</version>
		</dependency>
		
		<!--
		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-http-jdk-client -->
		<!-- Inclusion of this dependency causes Exception:  java.lang.IllegalArgumentException: Unknown HttpClient factory netty  -->
		<!--<dependency> 
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-http-jdk-client</artifactId>
			<version>4.13.0</version>
		</dependency>
		-->
		<dependency>
    		<groupId>org.seleniumhq.selenium</groupId>
   			<artifactId>selenium-remote-driver</artifactId>
   			<version>4.16.1</version>
		</dependency>
		

		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.8.0</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.9.8</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.9.8</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.9.8</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.11.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.11.1</version>
		</dependency>
		<!-- This is for POJO creation -->
		<dependency>
			<groupId>org.jsonschema2pojo</groupId>
			<artifactId>jsonschema2pojo-core</artifactId>
			<version>1.0.0</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>5.3.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>5.1.0</version>
		</dependency>


	</dependencies>

	<properties>
		<aspectj.version>1.8.10</aspectj.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>

		<outputDirectory>build/maven/${artifactId}/target/classes</outputDirectory>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.4.1</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.5.2</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>20</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<argLine>
						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
					</argLine>
					<argLine>
						--illegal-access=permit
					</argLine>
					<includes>
						<include>%regex[.*testsuite.*class]</include>
					</includes>
					<properties>
						<property>
							<name>listener</name>
							<value>
								com.data.listener.ConfigurationAnnotationTransformerListener
							</value>
						</property>
					</properties>
					<systemPropertyVariables>

					</systemPropertyVariables>
					<!-- Commenting out to prevent parallel execution -->
					<!-- <parallel>classes</parallel>
					<threadCount>20</threadCount> -->
					
					<!-- After the master process of the build is shutdown by
					sending SIGTERM 
						signal or pressing CTRL+C, the master process immediately sends SHUTDOWN 
						command to every forked JVM. This makes sure that all the threads are stopped 
						immediately after terminating the execution using CTRL+C -->
					<shutdown>kill</shutdown>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.aspectj</groupId>
						<artifactId>aspectjweaver</artifactId>
						<version>${aspectj.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>

		</plugins>


	</build>

</project>